[tool.poetry]
name = "implement"
version = "0.1.0"
description = ""
authors = ["NickSheva <nikolayshevtsov@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
moviepy = "^1.0.3"
speechrecognition = "^3.10.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
